# radet-beta

./: .gitignore  LICENSE  README.md  pyproject.toml
.ipynb_checkpoints/: README-checkpoint.md
examples/: README.md  collection_interpolate.ipynb  eecu_analysis.py  radet_collection_interpolate.ipynb  radet_single_image.ipynb  runtime_comparison.ipynb  single_image.ipynb
examples/eecu_data/: eecu.txt
examples/eecu_output/: eecu_data.csv  eecu_disalexi.csv  eecu_eemetric.csv  eecu_geesebal.csv  eecu_pt-jpl.csv  eecu_sims.csv  eecu_ssebop.csv  runtime_analysis_5k.csv  runtime_analysis_full.csv
radet/: __init__.py  collection.py  image.py  landsat.py  meteorology.py  model.py  utils.py
radet/tests/: test_a_utils.py  test_b_landsat.py  test_b_meteorology.py  test_b_model.py  test_c_image.py  test_d_collection.py  test_e_interpolate.py
